--- a/src/App.css
+++ b/src/App.css
@@ -69,10 +69,14 @@ input:focus {
 
 .card {
   margin: 1rem;
+  background-color: #12d0e9;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border-radius: 0.5rem;
 }
 
 .card img {
-  width: 100%;
+  width: 75%;
 }
 
 .card button {
@@ -101,7 +105,75 @@ input:focus {
     width: calc(20% - 2rem);
   }
 }
-button.primary {
-  background-color: yellow;
-  color: black;
+
+body {
+  font-family: 'Helvetica';
+}
+h1,
+h2,
+h3 {
+  margin: 0.5rem 0;
+}
+h1 {
+  font-size: 1.5rem;
+}
+h2 {
+  font-size: 1.2rem;
+}
+h3 {
+  font-size: 1rem;
+}
+a {
+  text-decoration: none;
+}
+.row {
+  display: flex;
+  justify-content: space-between;
+}
+.row.center {
+  align-items: center;
+}
+.col-1 {
+  flex: 1;
+}
+.col-2 {
+  flex: 2;
+}
+
+.text-right {
+  text-align: right;
+}
+img.small {
+  max-height: 12 rem;
+}
+button {
+  font-size: 0.8rem;
+  padding: 0.2rem;
+  margin: 0.1rem;
+  border-radius: 0.5rem;
+  border: 0.1rem #404040 solid;
+  background-color: #f0c040;
+  width: 100%;
+  cursor: pointer;
+}
+button.add {
+  background-color: #40c0f0;
+  width: 3rem;
+}
+button.remove {
+  background-color: #f04040;
+  width: 3rem;
+}
+button.badge {
+  background-color: #f04040;
+  border: none;
+  color: #ffffff;
+  width: 1.5rem;
+}
+.block {
+  background-color: #e0e0e0;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border-radius: 0.5rem;
+
 }
