--- a/src/App.css
+++ b/src/App.css
@@ -187,18 +187,22 @@ button.badge {
 
 }
 
+#logo {
+  color: #fff;
+  font-size: 1.25em;
+  font-family: Helvetica;
+  margin-right: 0.5rem;
+}
 
- .categories a{
-  
-  padding: 0.5rem;
-  border-radius: 0.5rem;
-  margin: 1rem;
-  
+.categories a{
+  padding: 1rem;
+  border-radius: 1rem;
+  margin: 3rem;
   background-color: #98f5e1;
 }
 
 
- a {
+a {
   padding: 0.1rem;
   border-radius: 0.5rem;
   margin: 0.5rem;
@@ -206,9 +210,9 @@ button.badge {
 
 }
 .catologlist {
-  
   margin-top: 2rem;
 }
+
 html {
   background-color: #cfbaf0;
 }
